# AndroidPerformanceMonitoring

./: settings.gradle.kts
andCrash/: build.gradle.kts
andCrash/src/main/cpp/: CMakeLists.txt  jni_env_deleter.h  native_crash_handler.cpp  native_crash_handler.h  native_crash_jni_bridge.cpp
andCrash/src/main/cpp/core/: CMakeLists.txt  hprof_dump.cpp  log_utils.cpp
andCrash/src/main/cpp/core/include/: hprof_dump.h  log_utils.h
andCrash/src/main/java/com/github/andcrash/hprofparser/: ActiveThread.kt  ActiveThreadStackFrame.kt  ConstField.kt  GcRootRefGraph.kt  HeapDumpInfo.kt  Hprof.kt  HprofHeader.kt  HprofRecord.kt  HprofRecordTag.kt  HprofRecordsLinked.kt  HprofVersion.kt  Instance.kt  LoadedClass.kt  MemberField.kt  PrimitiveType.kt  ReaderUtils.kt  StackFrame.kt  StackTrace.kt  StaticField.kt  ValueHolder.kt
andCrash/src/main/java/com/github/andcrash/jcrash/: AndCrash.java  CrashLogger.java  DeviceInfoCollector.java  IUncaughtExceptionHandler.java  LogUploader.java  NormalUncaughtException.java  OOMUncaughtExceptionHandler.java  Test.kt  TestCrash.kt  UploadCallback.java
andCrash/src/main/java/com/github/andcrash/nativecrash/: NativeCrash.java  NativeCrashCallback.java
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/github/crash/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  and_apm.cpp  and_apm.h  apm_bridge.cpp  crash_handler.cpp  crash_handler.h  jni_bridge.cpp  readme.md
app/src/main/cpp/nativeCrash/: CMakeLists.txt  jni_env_deleter.cpp  native_crash_handler.cpp  native_crash_handler.h  native_crash_jni_bridge.cpp
app/src/main/java/com/github/crash/: AndAPM.java  App.kt  CrashMainActivity.java  CustomException.java  CustomUncaughtExceptionHandler.java  MainActivity.kt  MainActivity2.kt  OkHttpUploader.java
app/src/main/java/com/github/crash/crash/: CrashLogger.java  DeviceInfoCollector.java  LogUploader.java  TestCrash.kt  UploadCallback.java
app/src/main/java/com/github/crash/crash/cnative/: NativeCrash.java  NativeCrashCallback.java
app/src/main/java/com/github/crash/crash/native_crash/: CrashHandler.java
app/src/main/res/layout/: activity_crash_main.xml  activity_main.xml  activity_main2.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/github/crash/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
